# cuda_rest_api

./: CMakeLists.txt  README.md  cuda_hello.cu  cuda_hello.h  main.cpp
